# web2md

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md  rust_out
.github/workflows/: ci.yml  release.yml
src/: branding.rs  browser.rs  crawl.rs  diff_markdown.rs  docs.rs  extract.rs  feed.rs  html_meta.rs  html_to_md.rs  html_util.rs  lib.rs  main.rs  markdown.rs  mcp.rs  persistent_cache.rs  redact.rs  robots.rs  search.rs  structured.rs  structured_content.rs  transform.rs  url_blacklist.rs  youtube.rs
src/js/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs
tests/: integration.rs
