[package]
name = "browsedown"
version = "0.1.0"
edition = "2021"
authors = ["Ying Kit WONG"]
description = "A headless browser that returns web pages as Markdown for MCP token efficiency"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/browsedown"
documentation = "https://docs.rs/browsedown"
homepage = "https://github.com/yingkitw/browsedown"
categories = ["web-programming::http-client", "development-tools::build-utils"]
keywords = ["mcp", "browser", "markdown", "web-scraping", "headless"]

[dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
html2md = "0.2"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"

[dev-dependencies]
mockito = "1.4"

[[bin]]
name = "browsedown"
path = "src/main.rs"

[lib]
name = "browsedown"
path = "src/lib.rs"
