[package]
name = "web2md"
version = "0.1.5"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A tool that fetches web pages and returns them as Markdown for MCP token efficiency"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/web2md"
documentation = "https://docs.rs/web2md"
homepage = "https://github.com/yingkitw/web2md"
categories = ["web-programming::http-client", "development-tools::build-utils"]
keywords = ["mcp", "markdown", "web-scraping", "html", "converter"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "http2", "charset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
scraper = "0.23"
sha2 = "0.10"
regex = "1"

[dev-dependencies]
mockito = "1.4"

[[bin]]
name = "web2md"
path = "src/main.rs"

[lib]
name = "web2md"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
